[project]
name = "ComfyUI_D00MYsNodes"
description = "Nodes: Images_Converter, Show_Text, Strings_From_List, Random_Images, Load_Images_From_Paths, JSPaint."
version = "0.0.4"
license = "MIT"

[project.urls]
Repository = "https://github.com/doomy23/ComfyUI-D00MYsNodes/"

[tool.comfy]
PublisherId = "doomy23"
DisplayName = "ComfyUI_D00MYsNodes"
Icon = ""
